# backend

./: .env.example  .gitignore  .surrealdb  Cargo.toml  LICENSE  README.md  README_zh_CN.md
.github/workflows/: backend.yml  ci.yml
docs/: api.md  api_book.md
docs/en/: api_book.md
docs/zh-CN/: api_book.md
hurl/: health_check.hurl  login_and_check_user.hurl  register_user.hurl  verify_user.hurl
logs/: backend.log.2025-09-21
migrations/: 20251023_123352_initial_ns_and_db.surql
migrations/definitions/: 20251023_123352_initial_ns_and_db.json  _initial.json
schemas/: audit_log.surql  devices.surql  email.surql  email_verification_tokens.surql  ip_blacklist.surql  refresh_tokens.surql  trusted_devices.surql  users.surql
src/: lib.rs  log.rs  main.rs  openapi.rs  shutdown.rs  state.rs
src/config/: backend_server.rs  frontend_server.rs  jwt.rs  mail_server.rs  mod.rs  redis_server.rs  surreal_server.rs
src/constants/: logo.rs
src/constants_and_statics/: logo.rs  mod.rs  regex.rs
src/core/: app_state.rs  config.rs  error.rs  init.rs  mod.rs  shutdown.rs  state.rs
src/core/error/: access_token.rs  device.rs  email.rs  error_trait.rs  external.rs  mod.rs  other.rs  refresh_token.rs  user.rs  validation.rs
src/core/errors/: access_token.rs  device.rs  email.rs  external.rs  mod.rs  other.rs  refresh_token.rs  user.rs  validation.rs
src/core/response/: builder.rs  mod.rs
src/custom/: mod.rs  responder.rs  response.rs  result.rs
src/custom/errors/: access_token.rs  app_error.rs  device.rs  email.rs  external.rs  from.rs  mod.rs  other.rs  refresh_token.rs  trusted_device.rs  user.rs  validation.rs
src/custom/responder/: mod.rs
src/custom/response/: builder.rs  mod.rs
src/database/: client.rs  mod.rs
src/database/redis/: client.rs
src/database/surreal/: client.rs
src/dto/: auth.rs  email.rs  mod.rs  user.rs
src/dto/request/: auth.rs  user.rs
src/dto/response/: auth.rs  user.rs
src/dtos/requests/: auth.rs  email.rs  login.rs  mod.rs  register.rs  user.rs
src/dtos/responses/: auth.rs  login.rs  mod.rs  register.rs  user.rs  verify_user.rs
src/handlers/: admin.rs  auth.rs  email.rs  health.rs  mfa.rs  mod.rs  password.rs  user.rs
src/handlers/admin/: me.rs
src/handlers/public/: auth.rs  health.rs  mod.rs
src/mail/: mails.rs  mod.rs  sendmail.rs
src/mail/templates/: mod.rs  reset_password_email_html.rs
src/middlewares/: auth.rs  cors.rs  logger.rs
src/models/: audit_log.rs  device.rs  email.rs  email_code.rs  ip_blacklist.rs  mod.rs  refresh_token.rs  role.rs  token.rs  trust_device.rs  trusted_device.rs  user.rs  user_role.rs
src/observability/: log.rs  mod.rs
src/repositories/: auth.rs  mod.rs
src/repositories/postgres/: auth.rs
src/repositories/redis/: auth.rs  health.rs
src/repositories/surreal/: auth.rs  device.rs  email.rs  health.rs  mod.rs  refresh_token.rs  trusted_device.rs  user.rs
src/routers/: auth.rs  health.rs  mod.rs  protected.rs  public.rs  user.rs
src/routes/: mod.rs  protected.rs  public.rs
src/security/: jwt.rs  mod.rs
src/security/crypto/: password.rs
src/services/: admin.rs  auth.rs  health.rs  mod.rs  user.rs
src/templates/: verification_email_html.rs
src/traffic/: mod.rs
src/utils/: color.rs  device.rs  mail.rs  mod.rs  password.rs  regex.rs  token.rs
src/validation/: auth.rs  user.rs
src/vo/: auth.rs  user.rs
tests/: health.rs
