[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
axum-prometheus = "0.9.0"
opentelemetry-prometheus = "0.13"
prometheus = "0.13"
chrono = { version = "0.4.41", features = ["serde"] }
cookie = "0.18.1"
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.18" }
openssl = "0.10.73"
redis = { version = "0.32.5", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
surrealdb = "2.3.10"
thiserror = "2.0.15"
time = "0.3.43"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "registry", "std"] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.3"
once_cell = "1.21.3"
user-agent-parser = "0.3.6"
tracing-appender = "0.2.3"
