[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
jsonwebtoken = "9.3.1"
openssl = "0.10.73"
redis = { version = "0.32.5", features = ["tokio-comp"] }
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = "2.3.10"
thiserror = "2.0.15"
time = "0.3.43"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace", "cors"] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "fmt",
  "registry",
  "std",
] }
uuid = { version = "1.18.0", features = ["serde", "v4"] }
once_cell = "1.21.3"
tracing-appender = "0.2.3"
owo-colors = "4.2.3"
colorgrad = "0.7.2"
validator = { version = "0.20.0", features = ["derive"] }
uaparser-rs = "0.1.0"
resend-rs = "0.18.0"
fancy-regex = "0.16.2"
axum-test = "18.2.1"
serde_json = "1.0.145"
